# odatests

./: .gitattributes  .gitignore  README.md  demolist.ini  odatestcases.py  odatests.py  odatests.pyproj  odatests.sln  pyproject.toml  secret.py
.github/workflows/: build.yml
demos/: .gitignore  02noview.lmp  07intowr.lmp  07tower.lmp  2ghosts.lmp  30nm4048.lmp  32in24-7-024_map03.lmp  bfgdemo.lmp  blindav.lmp  bohfight.lmp  bounce1.lmp  bounce2.lmp  burnthru.lmp  cacofit2.lmp  cacofite.lmp  combslip.lmp  coopuv30.lmp  d1shock.lmp  d1slide.lmp  d2shock.lmp  d2slide.lmp  deadlift.lmp  dedngone.lmp  ep1-0500.lmp  firewall.lmp  flicker.lmp  fusedem.lmp  ghostpe1.lmp  ghostpe2.lmp  hf21tysn.lmp  hr2-lv01.lmp  impfight.lmp  impghost.lmp  impmiss.lmp  lv04-028.lmp  lv07-046.lmp  lv12-043.lmp  lv15s032.lmp  manormis.lmp  nm30cop1.lmp  (+14 more)
wads/: .gitignore  32in24-7-024.wad  av.wad  chex.deh  chex.wad  gothicdm.wad  hr.wad  hr2final.wad  icarus.wad  mm2.wad  requiem.wad
