[tool.poetry]
name = "odatests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pynacl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
